glx/testdata/invalid/missing-required-fields/assertions/assertion-missing-claim.glx
assertions:
  assertion-missing-claim:
    subject: person-123
    value: "John"
    citations:
      - citation-123


